<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ic_important">Favorits</string>
    <string name="ic_search">Search</string>
    <string name="ic_share">Share</string>
    <string name="ic_about">About</string>
    <string name="ic_accounts">Account</string>
    <string name="ic_settings">Settings</string>
    <string name="empty">No Data</string>
  <string-array name="settingsList" >
      <item >Home</item>
      <item >Merchant log in</item>
      <item >Manage favorits</item>
      <item >Notifications</item>
  </string-array>
</resources>
