<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item android:id="@+id/action_favorits"
          android:icon="@drawable/ic_action_important"      
           android:title="@string/ic_important"
           android:showAsAction="ifRoom"/>
   
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"        
          android:title="@string/ic_search"
          android:showAsAction="ifRoom"/>
   <!--  
    <item android:id="@+id/action_share"
          android:icon="@drawable/ic_action_share"        
          android:title="@string/ic_share"
          android:showAsAction="ifRoom"/>
    -->
    <item android:id="@+id/action_accounts"
          android:icon="@drawable/ic_action_accounts"
          android:title="@string/ic_accounts"
           android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/ic_settings"
           android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_about"
          android:icon="@drawable/ic_action_about"
          android:title="@string/ic_about"
           android:showAsAction="ifRoom" />
</menu>
